# ethos

./: .env.example  .gitignore  License  README.md  pyproject.toml  pytest.ini  requirements.txt
ethos/: argparser.py  config.py  main.py  player.py  spotify_importer.py  utils.py
ethos/tests/: test_player.py
ethos/tools/: endless_playback.py  helper.py
ethos/ui/: rich_layout.py  styles.tcss  textual_app.py  ui.py
ethos/ui/utils/: assets.py  square_drawer.py
ethos/userfiles/: recents.json
ethos/userfiles/playlists/: playlist1.json  playlist2.json
tests/: conftest.py  test_player.py
tests/test_player/: test_playback.py
tools/: helper.py
